# eye-in-hand

./: CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  Makefile  README.md  camera  camera_hand  cmake_install.cmake  doxygen.in  filelog.txt  filelog_camera.txt  filelog_word.txt  package.xml  pos_log.txt  ptam_pose.txt  ptam_pose11.txt  ptam_pose12.txt  ptam_pose15.txt  ptam_pose2.txt  ptam_pose3.txt  ptam_pose4.txt  ptam_pose6.txt  ptam_pose7.txt  ptam_pose8.txt  ptam_pose9.txt  test  test_.txt
Config/: code_param.yaml  default.xml  out_camera_data.xml
User_interface/: User_interface.pro  interface.cpp  interface.h  interface.ui  main.cpp
build-User_interface-Desktop-Debug/: Makefile  User_interface  moc_interface.cpp  ui_interface.h
file_log/: filelog_camera31.txt  filelog_word.txt  filelog_word31.txt  package.xml  pos_log22.txt  pos_log24.txt  pos_log25.txt  pos_log26.txt  pos_log27.txt  pos_log28.txt  pos_log29.txt  pos_log30.txt  pos_log31.txt  pos_log_21.txt  ptam_pose.txt  ptam_pose10.txt  ptam_pose14.txt  ptam_pose16.txt  ptam_pose17.txt  ptam_pose18.txt  ptam_pose19.txt  ptam_pose20.txt  ptam_pose21.txt  ptam_pose23.txt  ptam_pose24.txt  ptam_pose25.txt  ptam_pose26.txt  ptam_pose27.txt  ptam_pose28.txt  ptam_pose29.txt  ptam_pose30.txt  ptam_pose31.txt  ptam_pose5.txt
include/: Camera_code.h  Scale_estimation.hpp  calibration.h  camera_hand.h  converter_file.hpp  function_camera.hpp  geometry_function.hpp  image_converter.hpp  plane_estimate.hpp  ptam_scale.h  test_whit_ptam_and_ros.h
launch/: Camera.launch  image_maind.launch  ptam_cal.launch  ptam_scala.launch
relazione/: Appendix.aux  Appendix.tex  Pseudo.aux  bibliography.bib  chapter1.aux  chapter1.tex  chapter2.aux  chapter2.tex  chapter3.aux  chapter3.tex  chapter4.aux  chapter4.tex  chapter5.aux  chapter5.tex  chapter6.aux  chapter6.tex  introduction.tex  no_rot_1_metodo.fig  pag0.aux  pag0.bbl  pag0.blg  pag0.dvi  pag0.fdb_latexmk  pag0.fls  pag0.lof  pag0.out  pag0.tex  pag0.toc  punti_c.fig  punti_c_3d.fig  punti_word.fig  rot_primo_metodo.fig  struttura.pptx  struttura1.pptx
relazione/doxygen/: report_code
relazione/doxygen/report_resasco/: Camera__code_8cpp.tex  Camera__code_8h.tex  annotated.tex  calibration_8cpp.tex  calibration_8h.tex  classCamera.tex  classSettings.tex  converter__file_8hpp.tex  dany__old_8cpp.tex  dir_050edd66366d13764f98250ef6db77f6.tex  dir_14807827589b339a04434892d1c1deae.tex  dir_23e96954118483d4ba0b8ac392bc1831.tex  dir_55828da398209364690cb6185041d088.tex  dir_6784d02576e85afb0534c055de8b2d5a.tex  files.tex  geometry__function_8hpp.tex  main__image___8cpp.tex  plane__estimate_8hpp.tex  refman.tex  structCamera_1_1Obj.tex  test__dany_8cpp.tex  test__dany__old_8cpp.tex  test__vslam__pose__ptam_8cpp.tex
src/: Camera_code.cpp  calibration.cpp  camera_hand.cpp  camera_hand_oldcode.cpp  code_old.cpp  dany_old.cpp  dany_test.cpp  keycommands.cpp  main_image_.cpp  node_scale_.cpp  prova.xml  prova_camera_dany.cpp  prova_ptam_res.cpp  test_dany.cpp  test_dany_old.cpp  test_gui.cpp  test_kalman_ball_tracking.cpp  test_vslam_pose_ptam.cpp  test_whit_ptam_and_ros.cpp
