<?xml version="1.0"?>
<package>
  <name>eye_in_hand</name>
  <version>0.0.0</version>
  <description>The eye_in_hand package</description>

  <maintainer email="danielaresasco@gmail.com">Daniela Resasco</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>controller_interface</build_depend> 
  <build_depend>control_msgs</build_depend> 
  <build_depend>control_toolbox</build_depend> 
  <build_depend>realtime_tools</build_depend> 
  <build_depend>urdf</build_depend> 
  <build_depend>forward_command_controller</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>lwr_hw</build_depend>
  <build_depend>lwr_controllers</build_depend>
  <build_depend>calibration</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>image_transport</build_depend>
   <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>

  <run_depend>image_transport</run_depend>
   <run_depend>cv_bridge</run_depend>
  <run_depend>OpenCV</run_depend>




  <run_depend>message_runtime</run_depend>     
  <run_depend>message_generation</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>angles</run_depend>
  <run_depend>controller_interface</run_depend> 
  <run_depend>control_msgs</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>realtime_tools</run_depend> 
  <run_depend>urdf</run_depend> 
  <run_depend>forward_command_controller</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf_conversions</run_depend>
   <run_depend>lwr_hw</run_depend>
  <run_depend>lwr_controllers</run_depend>
  <run_depend>calibration</run_depend>
  <run_depend>ecl_geometry</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

 <!--  <export>
    <controller_interface plugin="${prefix}/desperate_housewife_controllers.xml"/>
  </export>  -->  

</package>